--- a/style.css
+++ b/style.css
@@ -1,3 +1,201 @@
+/* RAM's GLOBALS */
+
+/* try this property at some point object-fit: contain; */
+
+#mainDiv {
+  background: url("./Art/twilightGradient.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+}
+
+.section {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.divRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.flex-item {
+  display: flex;
+}
+
+.divSpacer {
+  display: flex;
+  flex-direction: row;
+  height: 300px;
+}
+
+#bottomBanner {
+  color: purple;
+  text-align: center;
+  font-family: "Lobster";
+  font-size: 200%;
+}
+
+.lightBlue {
+  background-color: aquamarine;
+}
+
+#titleDivRow {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.titleDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-self: auto;
+  text-align: center;
+  padding: 40px;
+}
+
+.titleBackground {
+  background-color: blanchedalmond;
+}
+
+#titleLine {
+  font-family: "Lobster";
+  font-size: 400%;
+  color: hotpink;
+}
+
+#titleTagline {
+  font-family: "Lobster";
+  font-size: 150%;
+  font-weight:1;
+  color: blanchedalmond;
+}
+
+.twilight {
+  background-color: #39CCCC;
+}
+
+
+/* MOON MOON MOON */
+
+#moon {
+  max-width: 500px;
+}
+
+/* WHALE WHALE WHALE WHALE WHALE WHALE WHALE WHALE */
+
+.divWhale {
+  height: 20%;
+  margin: auto;
+  display: grid; /* USE THIS TO STACK THE WHALES ATOP ONE ANOTHER, CORRESPONDING "grid-column" & "grid-row" specified below, duplicated for each whale. 
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background: url("./Art/whale_scream.gif");
+  background-repeat: no-repeat;
+  background-size: 50% 100%;
+  background-position: center;*/
+  transition: all .2s ease-in-out;
+}
+
+.divWhale:hover {
+  transform: scale(1.1);
+}
+
+#whale_swimming {
+  grid-column: 1;
+  grid-row: 1;
+  opacity: 1;
+  transition: all .15s ease-in-out;
+}
+
+#whale_swimming:hover {
+  opacity: 0;
+}
+
+#whale_screaming {
+  position: relative;
+  grid-column: 1;
+  grid-row: 1;
+  opacity: 0;
+  transition: all .15s ease-in-out;
+}
+
+#whale-screaming:hover {
+  opacity: 1;
+}
+
+.whale {
+  max-width: 400px;
+}
+
+
+
+/* GEMS GEMS GEMS GEMS GEMS GEMS GEMS GEMS GEMS GEMS */
+
+#divGems {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.gemstone {
+  max-width: 50%;
+  margin: auto;
+  padding: 5% 0;
+  display: inline-block;
+  animation: wiggle 1s infinite;
+  flex: 1;
+}
+
+.gemstone:Hover {
+  animation-play-state: paused;
+}
+
+.gemstoneBulge {
+  transition: all .15s ease-in-out;
+}
+
+.gemstoneBulge:hover {
+  transform: scale(1.5);
+}
+
+/* ANIMATIONS */
+
+@keyframes wiggle {
+  0% { transform: rotate(0deg); }
+ 80% { transform: rotate(0deg); }
+ 85% { transform: rotate(5deg); }
+ 95% { transform: rotate(-5deg); }
+100% { transform: rotate(0deg); }
+10%, 90% {
+  transform: translate3d(-1px, 0, 0);
+}
+
+20%, 80% {
+  transform: translate3d(2px, 0, 0);
+}
+
+30%, 50%, 70% {
+  transform: translate3d(-4px, 0, 0);
+}
+
+40%, 60% {
+  transform: translate3d(4px, 0, 0);
+}
+}
+
+
+
+/* INHERITED RULES */
+
+
 :root {
   --bg-dark: hsla(330, 48.5%, 32%, 1);
   --txt-dark: hsla(330, 40.2%, 45.9%, 1);
@@ -79,275 +277,3 @@ button {
   margin: auto;
 }
 
-.section {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.section--1 {
-  background-color: var(--bg-dark);
-  padding-block: var(--space-2) var(--space-4);
-  padding-inline: clamp(var(--space-1), 5vw, 181px);
-}
-.section--1 .wrapper {
-  gap: var(--space-4);
-}
-.section--1 .header {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
-  gap: var(--space-3);
-}
-.section--1 .header__logo {
-  font-size: var(--fontSize-3);
-  font-weight: var(--fontWeight-2);
-  color: var(--txt-light);
-}
-.section--1 .header__menu {
-  display: flex;
-  gap: var(--space-3);
-}
-.section--1 .header__menu-item {
-  font-size: var(--fontSize-2);
-  color: var(--txt-grey);
-}
-.section--1 .hero {
-  min-height: 250px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  gap: var(--space-3);
-}
-.section--1 .hero__left {
-  flex: 1;
-  display: flex;
-  gap: var(--space-1);
-  flex-direction: column;
-}
-.section--1 .hero__left-heading {
-  color: var(--txt-light);
-  font-size: var(--fontSize-5);
-}
-.section--1 .hero__right {
-  align-self: stretch;
-  flex: 1.24;
-  border-radius: 8px;
-  background: url("/Coolness.png");
-  background-size: cover;
-}
-.section--2 {
-  background-color: var(--txt-light);
-  padding-block: var(--space-3) var(--space-4);
-  padding-inline: clamp(var(--space-1), 12vw, 181px);
-}
-.section--2 .wrapper {
-  gap: var(--space-2);
-}
-.section--2__header {
-  display: flex;
-  justify-content: center;
-  color: var(--txt-dark-2);
-}
-.section--2__cards {
-  display: flex;
-  gap: var(--space-2);
-}
-.section--2__cards .card {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: var(--space-1);
-  color: var(--txt-dark-2);
-  font-weight: var(--fontWeight-0);
-}
-.section--2__cards .card .img {
-  border-radius: 8px;
-  width: 140px;
-  height: 140px;
-}
-.section--2__cards .card .img--1 {
-  background-color: hsl(330deg, 82%, 67%);
-}
-.section--2__cards .card .img--2 {
-  background: hsl(330deg, 52%, 56%);
-}
-.section--2__cards .card .img--3 {
-  background: var(--txt-dark-2);
-}
-.section--2__cards .card .img--4 {
-  background: var(--txt-dark);
-}
-.section--2__cards .card p {
-  text-align: center;
-}
-.section--3 {
-  background-color: var(--txt-grey);
-  padding-block: var(--space-4) var(--space-4);
-}
-.section--3 .wrapper {
-  max-width: 70ch;
-}
-.section--3 p.big {
-  font-size: var(--fontSize-4);
-  color: var(--bg-dark);
-  font-weight: var(--fontWeight-0);
-}
-.section--3 p.author {
-  align-self: flex-end;
-  color: var(--bg-dark);
-  font-weight: var(--fontWeight-2);
-}
-.section--4 {
-  background-color: var(--txt-light);
-  padding-block: var(--space-3) var(--space-4);
-  padding-inline: var(--space-6);
-}
-.section--4 .wrapper {
-  max-width: 70ch;
-}
-.section--4 .cta {
-  gap: 8px;
-  border-radius: 8px;
-  background-color: var(--cta);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-block: var(--space-2);
-  padding-inline: var(--space-4);
-}
-.section--4 .cta__textBox {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-}
-.section--4 .cta__textBox-big {
-  font-weight: var(--fontWeight-2);
-  font-size: var(--fontSize-3);
-}
-
-.button {
-  width: 170px;
-  height: 40px;
-  border-radius: 8px;
-}
-.button--cta {
-  font-size: var(--fontSize-1);
-  font-weight: var(--fontWeight-2);
-  background-color: var(--cta);
-}
-.button--cta--transparent {
-  background-color: transparent;
-  border: 2px solid var(--txt-grey);
-}/*# sourceMappingURL=style.css.map */
-
-.lightBlue {
-  background-color: aquamarine;
-}
-
-.titleBackground {
-  background-color: blanchedalmond;
-}
-
-.twilight {
-  background-color: #39CCCC;
-}
-
-#mainDiv {
-  background: url("./Art/twilightGradient.png") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  display: flex;
-  flex-direction: column;
-}
-
-#titleLine {
-  font-family: "Lobster";
-  font-size: 400%;
-  color: hotpink;
-}
-
-#weaponsDiv {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-.divRow {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.titleDiv {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  padding: 40px;
-}
-
-.whale {
-  max-width: 400px;
-}
-
-.divSpacer {
-  display: flex;
-  flex-direction: row;
-  height: 300px;
-}
-
-.gemstone {
-  max-width: 200px;
-  margin: auto;
-  padding: 5% 0;
-  display: inline-block;
-  animation: wiggle 1s infinite;
-}
-
-.gemstone:Hover {
-  animation-play-state: paused;
-}
-
-.gemstoneBulge {
-  transition: all .15s ease-in-out;
-}
-
-.gemstoneBulge:hover {
-  transform: scale(1.5);
-}
-
-
-#bottomBanner {
-  color: purple;
-  text-align: center;
-  font-family: "Lobster";
-  font-size: 200%;
-}
-
-@keyframes wiggle {
-  0% { transform: rotate(0deg); }
- 80% { transform: rotate(0deg); }
- 85% { transform: rotate(5deg); }
- 95% { transform: rotate(-5deg); }
-100% { transform: rotate(0deg); }
-10%, 90% {
-  transform: translate3d(-1px, 0, 0);
-}
-
-20%, 80% {
-  transform: translate3d(2px, 0, 0);
-}
-
-30%, 50%, 70% {
-  transform: translate3d(-4px, 0, 0);
-}
-
-40%, 60% {
-  transform: translate3d(4px, 0, 0);
-}
-
-}
